@@ -4,7 +4,7 @@ apply plugin: "eclipse"
 
 test {
   systemProperty 'javax.xml.parsers.DocumentBuilderFactory', 'com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl'
-  jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m'
+  jvmArgs '-Xms128m', '-Xmx512m'
   testLogging.showStandardStreams = true
   beforeTest { descriptor ->
     logger.lifecycle("Running: " + descriptor)
@@ -42,10 +42,10 @@ dependencies {
   // Testing
   testCompile "junit:junit:$junitVersion"
   testCompile "org.springframework:spring-test:$springVersion"
-  testCompile "javax.jms:jms-api:1.1-rev-1"
+  testCompile "javax.jms:javax.jms-api:2.0.1"
   testRuntime "org.springframework:spring-context-support:$springVersion"
-  testRuntime "javax.transaction:transaction-api:1.1-rev-1"
+  testRuntime "javax.transaction:javax.transaction-api:1.3"
   testRuntime "org.aspectj:aspectjrt:$aspectjVersion"
   testRuntime "org.aspectj:aspectjtools:$aspectjVersion"
-  testRuntime "cglib:cglib-nodep:3.1"
+  testRuntime "cglib:cglib-nodep:3.2.6"
 }
