@@ -2,7 +2,7 @@ description = 'Spring Data JDBC Extensions Oracle'
 
 test {
   systemProperty 'javax.xml.parsers.DocumentBuilderFactory', 'com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl'
-  jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m'
+  jvmArgs '-Xms128m', '-Xmx512m'
 }
 
 repositories {
@@ -17,7 +17,7 @@ dependencies {
   compile "org.springframework:spring-jms:$springVersion", optional
   compile "org.springframework:spring-oxm:$springVersion", optional
 
-  compile "javax.jms:jms-api:1.1-rev-1", provided
+  compile "javax.jms:javax.jms-api:2.0.1", provided
 
   // Oracle proprietary jars - see 'spring-data-oracle/README.txt' for details on how to add these to your system
   compile "com.oracle.jdbc:oracle.jdbc:12.1.0.2", provided
@@ -26,7 +26,7 @@ dependencies {
   compile "com.oracle.xml:oracle.xml:12.1.3.0", provided
 
   // Testing
-  testCompile "org.easymock:easymock:2.5.2"
+  testCompile "org.easymock:easymock:3.5.1"
   testRuntime "org.aspectj:aspectjrt:$aspectjVersion"
   testRuntime "org.aspectj:aspectjtools:$aspectjVersion"
 }
